--- a/views/bookmarks/index.mustache
+++ b/views/bookmarks/index.mustache
@@ -23,7 +23,7 @@
                                 </div>
                                 <div class="form-group">
                                     <input id="tags" placeholder="Tags" type="text"
-                                           class="form-control">
+                                           class="form-control" value="{{defaultTag}}">
                                 </div>
                                 <div class="form-group">
                                     <button id="addBookmark" type="button" class="btn btn-primary">Add</button>
@@ -74,7 +74,12 @@
                                                 {{/complete}}
                                             </td>
                                             <td class="go-to-bookmark-highlight" data-uid="{{bookmarkUID}}">
-                                                <a href="{{bookmark}}" target="_blank">{{title}}</a>
+                                                <a href="{{bookmark}}" target="_blank">{{{title}}}
+
+                                                    <a class="btn btn-sm btnDeleteBookmark2 float-right"
+                                                       data-uid="{{bookmarkUID}}">
+                                                        <i class="fe fe-trash fe-4"></i>
+                                                    </a></a>
                                             </td>
                                             <td>
                                                 {{created}}
@@ -88,6 +93,9 @@
                                                 <div class="dropdown-menu dropdown-menu-right">
                                                     <a class="dropdown-item"
                                                        href="/bookmarks/{{bookmarkUID}}/highlights">Highlights</a>
+                                                    <a class="dropdown-item btnUpdateTitle"
+                                                       data-uid="{{bookmarkUID}}">Update Title
+                                                    </a>
                                                     <a class="dropdown-item"
                                                        href="/bookmarks/{{bookmarkUID}}">Edit</a>
                                                     {{#startAction}}
@@ -160,9 +168,9 @@
             var status = $(this).data('status');
             var result = ajaxCall('PUT', "/bookmarks/" + uid + "/status", "status=" + status)
 
-            if (result !== false) {
-                location.reload();
-            }
+            // if (result !== false) {
+            //     location.reload();
+            // }
 
         });
 
@@ -176,6 +184,17 @@
             }
 
         });
+
+        $(".btnDeleteBookmark2").on('click', function (e) {
+            var uid = $(this).data('uid');
+            ajaxCall('DELETE', "/bookmarks/" + uid, null)
+        });
+
+        $(".btnUpdateTitle").on('click', function (e) {
+            var uid = $(this).data('uid');
+            ajaxCall('PUT', "/bookmarks/" + uid + "/title", null)
+        });
+
 
     });
 </script>
