--- a/views/books/my.mustache
+++ b/views/books/my.mustache
@@ -54,13 +54,13 @@
 
     <script>
         $(document).ready(function () {
-            $('#booksDatatable').DataTable({
-                autoWidth: true,
-                "lengthMenu": [
-                    [16, 32, 64, -1],
-                    [16, 32, 64, "All"]
-                ]
-            });
+            // $('#booksDatatable').DataTable({
+            //     autoWidth: true,
+            //     "lengthMenu": [
+            //         [16, 32, 64, -1],
+            //         [16, 32, 64, "All"]
+            //     ]
+            // });
         });
     </script>
 </body>
