--- a/views/books/all.mustache
+++ b/views/books/all.mustache
@@ -141,14 +141,14 @@
                 }
             });
 
-            $('#booksDatatable').DataTable({
-                autoWidth: true,
-                "lengthMenu": [
-                    [32, 64, 128, -1],
-                    [32, 64, 128, "All"]
-                ],
-                "order": [[3, "desc"]]
-            });
+            // $('#booksDatatable').DataTable({
+            //     autoWidth: true,
+            //     "lengthMenu": [
+            //         [32, 64, 128, -1],
+            //         [32, 64, 128, "All"]
+            //     ],
+            //     "order": [[3, "desc"]]
+            // });
 
         });
     </script>
