--- a/views/bookmarks/details.mustache
+++ b/views/bookmarks/details.mustache
@@ -27,7 +27,7 @@
                                                value="{{title}}">
                                     </div>
                                     <div class="form-group">
-                                        <input id="note" placeholder="Note" type="number" class="form-control"
+                                        <input id="note" placeholder="Note" type="text" class="form-control"
                                                value="{{note}}">
                                     </div>
                                     <div class="form-group">
